fixed meals layout on small screen

--- a/src/components/Layout/Hero.module.scss
+++ b/src/components/Layout/Hero.module.scss
@@ -53,7 +53,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        font-size: 2.6rem;
+        font-size: 2.3rem;
         color: white;
         font-weight: bold;
       }
