--- a/src/components/Meals/MainMenu.module.scss
+++ b/src/components/Meals/MainMenu.module.scss
@@ -73,3 +73,22 @@
     }
   }
 }
+
+@media (max-width: 425px) {
+  .meals {
+    max-width: 95%;
+    margin: 0 auto;
+
+    ul {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      column-gap: 5px;
+      row-gap: 20px;
+    }
+
+    .error {
+      font-size: 1.2rem;
+      font-weight: bold;
+    }
+  }
+}
