--- a/src/components/Meals/MealItem/MealItem.module.scss
+++ b/src/components/Meals/MealItem/MealItem.module.scss
@@ -4,7 +4,7 @@
 
     .imgContainer {
       width: 270px;
-      margin: 5px 0;
+      margin: 5px auto;
 
       img {
         width: 100%;
@@ -31,7 +31,7 @@
   .mealContainer {
     .imgContainer {
       width: 270px;
-      margin: 5px 0;
+      margin: 5px auto;
 
       img {
         width: 100%;
@@ -64,9 +64,11 @@
 
 @media (max-width: 899px) {
   .mealContainer {
+    width: 100%;
+    margin: 0 auto;
     .imgContainer {
       width: 200px;
-      margin: 5px 0;
+      margin: 5px auto;
 
       img {
         width: 100%;
@@ -88,7 +90,7 @@
   .mealContainer {
     .imgContainer {
       width: 150px;
-      margin: 5px 0;
+      margin: 5px auto;
 
       img {
         width: 100%;
@@ -108,9 +110,10 @@
 
 @media (max-width: 425px) {
   .mealContainer {
+    width: 100%;
     .imgContainer {
-      width: 120px;
-      margin: 5px 0;
+      width: 130px;
+      margin: 5px auto;
 
       img {
         width: 100%;
@@ -121,7 +124,7 @@
 
     .item-details {
       p {
-        font-size: 1.2rem;
+        font-size: 1rem;
         font-weight: bold;
       }
     }
@@ -132,7 +135,7 @@
   .mealContainer {
     .imgContainer {
       width: 110px;
-      margin: 5px 0;
+      margin: 5px auto;
 
       img {
         width: 100%;
@@ -143,7 +146,7 @@
 
     .item-details {
       p {
-        font-size: 1.2rem;
+        font-size: 1rem;
         font-weight: bold;
       }
     }
