--- a/src/components/UI/Card.module.scss
+++ b/src/components/UI/Card.module.scss
@@ -1,8 +1,8 @@
 .card {
-  padding: 1rem;
+  padding: 10px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   border-radius: 14px;
   background-color: white;
   max-width: 90%;
-  margin: 0 auto;
+  margin: 0 5px;
 }
